--- a/config/recipe-kde-gaming.yml
+++ b/config/recipe-kde-gaming.yml
@@ -1,24 +1,22 @@
 name: pawzite-kde
-# description will be included in the image's metadata
-description: This is my personal gaming image, it has kde for desktop and isw for msi notebook fan control.
+description: This is my personal development image, it has kde for desktop and isw for msi notebook fan control.
 
-# the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/bazzite-nvidia
-image-version: 39 # latest is also supported if you want new updates ASAP
+image-version: 41
 
-# module configuration, executed in order
-# you can include multiple instances of the same module
 modules:
   - type: files
     files:
-      - bin: /bin
-      - etc: /etc
-      - lib: /lib
+      - source: bin
+        destination: /usr/bin
+      - source: etc
+        destination: /etc
+      - source: lib
+        destination: /usr/lib
 
   - type: rpm-ostree
 
   - type: default-flatpaks
-    notify: true # Send notification after install/uninstall is finished (true/false)
+    notify: true
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
-
+  - type: signing
