--- a/recipe-kde-dx.yml
+++ b/recipe-kde-dx.yml
@@ -2,17 +2,17 @@ name: pawrora-kde
 description: This is my personal development image, it has kde for desktop and isw for msi notebook fan control.
 
 base-image: ghcr.io/ublue-os/aurora-dx-nvidia
-image-version: 41
+image-version: '41'
 
 modules:
   - type: files
     files:
       - source: bin
-        destination: /usr/bin
+        destination: /bin
       - source: etc
         destination: /etc
       - source: lib
-        destination: /usr/lib
+        destination: /lib
 
   - type: rpm-ostree
 
